--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,31 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+
+header {
+    height: 75px;
+}
+
+.main-wrapper {
+    height: calc(100vh - 70px);
+}
+
+aside {
+    width: 200px;
+
+    ul {
+        list-style: none;
+
+
+        li {
+            line-height: 40px;
+
+            &:hover {
+                text-decoration: underline;
+            }
+
+            a {
+                text-decoration: none;
+                color: white;
+            }
+        }
+    }
+}
